# live-danmaku-hime

./: CMakeLists.txt  COPYING  Readme.md  live_danmaku_hime.conf
src/: app.cpp  app.h  config.cpp  config.h  dmhm_assert.cpp  load_config.cpp  load_config.h  main.cpp  utfconv.cpp  utils.h
src/fetcher/: console.cpp  console.h  fetcher.h
src/presenter/: gdi.cpp  gdi.h  gtk.cpp  gtk.h
src/renderer/: cairo_render.cpp  cairo_render.h  danmaku_entry.cpp  danmaku_entry.h  freetype_includer.h  renderer.h
tools/: toolchain-i686-w64-mingw32.cmake
