cmake_minimum_required(VERSION 3.0)
project(live_danmaku_hime)

if(NOT MSVC)
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
else()
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Ox /GL")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
endif()

aux_source_directory(src SRC_MAIN)
aux_source_directory(src/fetcher SRC_FETCHER)
aux_source_directory(src/renderer SRC_RENDERER)
if(WIN32)
    add_definition("-DCAIRO_STATIC_WORKAROUND")
    add_definition("-DUSE_GDI_PRESENTER")
    set(SRC_PRESENTER src/presenter/gdi.cpp)
else()
    set(SRC_PRESENTER src/presenter/gtk.cpp)
else()
endif()
add_executable(live_danmaku_hime ${SRC_MAIN} ${SRC_FETCHER} ${SRC_RENDERER} ${SRC_PRESENTER})

target_link_libraries(live_danmaku_hime PUBLIC "pthread")
if(WIN32)
    target_include_directories(live_danmaku_hime PRIVATE "3rd-party/include" "3rd-party/include/freetype2")
    find_library(LIB_CAIRO cairo "3rd-party/lib")
    find_library(LIB_CONFUSE confuse "3rd-party/lib")
    find_library(LIB_THIN_BUNDLE thin_bundle "3rd-party/lib")
    target_link_libraries(live_danmaku_hime PUBLIC "${LIB_CAIRO}" "${LIB_THIN_BUNDLE}" "${LIB_CONFUSE}" "winpthread")
else()
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(PKGCONF REQUIRED gtkmm-3.0 cairo libconfuse freetype2)
    target_include_directories(live_danmaku_hime PRIVATE ${PKGCONF_INCLUDE_DIRS})
    target_compile_options(live_danmaku_hime PUBLIC ${PKGCONF_CFLAGS_OTHER})
    target_link_libraries(live_danmaku_hime PUBLIC ${PKGCONF_LIBRARIES})
endif()

set_target_properties(live_danmaku_hime PROPERTIES
    CXX_STANDARD 11
    POSITION_INDEPENDENT_CODE ON
)
